# csv-bleach

./: .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: deploy.yml  python-package.yaml  python-package.yml
bleach/: __main__.py  detect_encoding.py  line_decoder.py  type_casting.py
csv_bleach/: __init__.py  __main__.py  constants.py  detect_delimiter.py  detect_encoding.py  detect_row_count.py  detect_rows_count.py  infer_schema.py  json_encode.pyi  json_encode.pyx  line_decoder.py  line_parser.py  main.py  type_casting.py
tests/: conftest.py  detect_row_count.py  test_delimiter_detection.py  test_detect_encoding.py  test_detect_row_count.py  test_infer_schema.py  test_line_decoder.py  test_main.py  test_read_world_data.py  test_type_casting.py
tests/real-world-data/: README.md
tests/real-world-data/cleaned/: NorseSagas.csv  OpticianOpeningTimes.csv  complex.csv
tests/real-world-data/examples/: NorseSagas.csv  OpticianOpeningTimes.csv  complex.csv
