[build-system]
requires = [
  "poetry-core>=1.2.0",
  "Cython",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry]
name = "csv_bleach"
version = "1.1.0"
description = "clean CSVs"
authors = ["George Burton <g.e.c.burton@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing"
]
repository = "https://github.com/gecBurton/csv-bleach"

[tool.poetry.dependencies]
python = ">=3.9.18"
click = "^8.1.3"
charset-normalizer = "<3.3.0" # issue found with 3.3.1

[tool.poetry.dev-dependencies]
cython = "^3.0.5"
black = "^23.11.0"
pytest = "^7.4.3"
mypy = "^1.6.1"
isort = "^5.10.1"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
Flake8-pyproject = "^1.2.2"


[tool.poetry.scripts]
bleach = 'bleach.__main__:cli'

[project.scripts]
bleach = 'bleach.__main__:cli'

[tool.flake8]
ignore = ['E501', 'W503']
max-line-length = 88
