[tool.poetry]
name = "csv_bleach"
version = "1.1.2"
description = "clean CSVs"
authors = ["George Burton <g.e.c.burton@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["csv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing"
]
repository = "https://github.com/gecBurton/csv-bleach"

[tool.poetry.dependencies]
python = ">=3.9.13"
click = "^8.1.3"
charset-normalizer = "<=3.3.0" # issue found with 3.3.1

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bleach = 'bleach.__main__:cli'

[project.scripts]
bleach = 'bleach.__main__:cli'
